Fix the animation style on IE

--- a/assignment3/css/style.css
+++ b/assignment3/css/style.css
@@ -27,7 +27,7 @@
 		opacity: 1;
 	}
 }
-keyframes slideUp{
+@keyframes slideUp{
 	from {
 		opacity: 0;
 	}
